Bug fix: make case card overflow scrollable. (PT-188200175)

--- a/v3/src/components/case-card/card-view.scss
+++ b/v3/src/components/case-card/card-view.scss
@@ -1,9 +1,13 @@
+@use "../vars.scss";
+
 .case-card-content {
   background: white;
   display: inline-block;
   font-size: 11px;
   min-width: 350px;
   width: 100%;
+  overflow-y: auto;
+  height: calc(100% - vars.$title-bar-height);
 
   .fadeIn {
     opacity: 0;
